--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,8 @@ name = "OctoPrint-BambuConnector"
 version = "0.0.1"
 description = "Enables connecting to Bambu printers."
 authors = [
-    {name = "jneilliii", email = "jneilliii+github@gmail.com"}
+    {name = "jneilliii", email = "jneilliii+github@gmail.com"},
+    {name = "Gina Häußge", email = "gina@octoprint.org"}
 ]
 readme = {file = "README.md", content-type = "markdown"}
 dynamic = [
